# ezlog

./: CMakeLists.txt  logger.cpp  logger.h  logger.hpp  main.cpp
